--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ sitemap:
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: http://cn.abnerchou.me
+url: https://cn.abnerchou.me
 root: /
 permalink: :year/:month/:day/:abbrlink/
 permalink_defaults:
