Remove minifier and google analysics

--- a/themes/yinwang/_config.yml
+++ b/themes/yinwang/_config.yml
@@ -18,7 +18,7 @@ menu:
   #categories: /categories
   #archives: /archives
   #tags: /tags
-  GitHub: https:github.com/noahdragon
+  GitHub: https://github.com/noahdragon
   About: /about
 
 # Static files
