--- a/_config.yml
+++ b/_config.yml
@@ -68,7 +68,7 @@ pagination_dir: page
 theme: yinwang
 
 # Google Analytics
-google_analyticsID: UA-48498357-2
+# google_analyticsID: UA-48498357-2
 
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
@@ -81,28 +81,6 @@ deploy:
 abbrlink:
   alg: crc32
   rep: hex
-
-# all-minifiler config
-html_minifiler:
-  enable: true
-  exclude:
-css_minifier:
-  enable: true
-  exclude:
-    - '*.min.css'
-js_minifier:
-  enable: true
-  mangle: true
-  output:
-  compress:
-  exclude:
-    - '*.min.js'
-image_minifier:
-  enable: false
-  interlanced: false
-  optimizationlevel: 2
-  pngquant: false
-  progressive: false
 
 # Markdown settings
 marked:
