Add travis support

--- a/_config.yml
+++ b/_config.yml
@@ -72,9 +72,9 @@ theme: yinwang
 
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
-deploy: 
+deploy:
   type: git
-  repo: https://github.com/NoahDragon/cn.git
+  repo: git@github.com:NoahDragon/cn.git
   branch: gh-pages
 
 # abbrlink config
