--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
   "hexo": {
     "version": "3.2.2"
   },
+  "scripts": {
+    "build": "hexo generate",
+    "deploy": "hexo deploy"
+  },
   "dependencies": {
     "hexo": "^3.1.1",
     "hexo-abbrlink": "^2.0.4",
