--- a/themes/indigo/_config.yml
+++ b/themes/indigo/_config.yml
@@ -1,5 +1,6 @@
 # hexo-theme-indigo
 # https://github.com/yscoder/hexo-theme-indigo
+version: 1.1.7
 
 #添加新菜单项遵循以下规则
 # menu:
@@ -12,27 +13,25 @@ menu:
     text: 主页
     url: /
   archives:
-    text: 存档
     url: /archives
-  list:
-    text: 分类
-    url: /categories
   tags:
-    text: 标签
     url: /tags
-  github:
-    text: GitHub
-    url: https://github.com/NoahDragon
-    target: _blank
+  th-list:
+    text: Categories
+    url: /categories
   weibo:
-    text: 微博
     url: http://www.weibo.com/lm00n
+    target: _blank
+  github:
+    url: https://github.com/NoahDragon
     target: _blank
 
 rss: /atom.xml
 
 #你的头像url
 avatar: https://avatars0.githubusercontent.com/u/5704064?v=3&s=466
+#favicon
+favicon: /favicon.png
 
 # email
 email: hi@abnerchou.me
@@ -40,9 +39,10 @@ email: hi@abnerchou.me
 # 设置 Android L Chrome 浏览器状态栏颜色
 color: '#3F51B5'
 
-# Content
-tags:
-  title: 标签
+# 页面标题
+tags_title: 标签
+archives_title: 存档
+categories_title: 分类
 
 # 文章截断
 excerpt_render: false
@@ -52,10 +52,13 @@ mathjax: false
 archive_yearly: true
 
 #是否开启分享
-share: false
+share: true
 
 #是否开启打赏，关闭 reward: false
 reward: false
+#  title: 谢谢大爷~
+#  wechat: /img/wechat.jpg     #微信，关闭设为 false
+#  alipay: /img/alipay.jpg     #支付宝，关闭设为 false
 
 #是否开启搜索
 search: true
@@ -68,12 +71,15 @@ hideMenu: true
 toc:
   list_number: true  # 是否显示数字排序
 
+#文章页版权声明内容，hexo中所有变量及辅助函数等均可调用，具体请查阅 hexo.io
+copyright: 本文标题： <a href="<%- url_for(post.path)%>" target="_blank"><%= post.title%></a> <br/>发布时间： <%= post.date.format("YYYY年M月D日 - HH时mm分") %> <br/>原始链接： </span><a href="<%- url_for(post.path)%> " title="<%= post.title%> " target="_blank"><%= post.permalink%></a> <br/>许可协议： </span><a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank"><img alt="知识共享许可协议" src="https://i.creativecommons.org/l/by-nc-sa/4.0/80x15.png" /></a> <br/><br/> 转载请保留以上信息
+
 #站长统计，如要开启，输入CNZZ站点id，如 cnzz: 1255152447
 cnzz: false
 
 # Miscellaneous
-google_analytics: ''
-favicon: /favicon.png
+google_analytics: false
+google_site_verification: false
 
 # less
 less:
@@ -82,14 +88,12 @@ less:
     - source/css/style.less
 
 #是否开启多说评论，填写你在多说申请的项目名称 duoshuo: duoshuo-key
-#若使用disqus，请在博客config文件中填写disqus_shortname，并关闭多说评论
 duoshuo: abnerchou
-
-#文章页版权声明内容，hexo中所有变量及辅助函数等均可调用，具体请查阅 hexo.io
-copyright: 本文标题： <a href="<%- url_for(post.path)%>" target="_blank"><%= post.title%></a> <br/>发布时间： <%= post.date.format("YYYY年M月D日 - HH时mm分") %> <br/>原始链接： </span><a href="<%- url_for(post.path)%> " title="<%= post.title%> " target="_blank"><%= post.permalink%></a> <br/>许可协议： </span><a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank"><img alt="知识共享许可协议" src="https://i.creativecommons.org/l/by-nc-sa/4.0/80x15.png" /></a> <br/><br/> 转载请保留以上信息
+#若使用disqus，请在博客config文件中填写disqus_shortname，并关闭多说评论
+disqus_shortname: false
 
 # 规范网址
 # 让搜索引擎重定向你的不同域名、不同子域、同域不同目录的站点到你期望的路径
 # https://support.google.com/webmasters/answer/139066
 # 假设配置为 canonical: http://imys.net，那么从搜索引擎中 www.imys.net 进入会重定向到 imys.net
-canonical: true
+canonical: ture
