--- a/_config.yml
+++ b/_config.yml
@@ -29,6 +29,12 @@ code_dir: downloads/code
 i18n_dir: :lang
 skip_render:
 
+# Include/Exclude Files/Folders
+include:
+  - .nojekyll
+exclude:
+  - .DS_Store
+
 # Writing
 new_post_name: :year-:month-:day-:title.md # File name of new posts
 default_layout: post
