--- a/.travis.yml
+++ b/.travis.yml
@@ -25,6 +25,7 @@ addons:
 
 before_script:
   - ssh-keyscan -H -t rsa,dsa git.coding.net >> ~/.ssh/known_hosts
+  - ssh-keyscan -H -t rsa,dsa 118.193.213.247 >> ~/.ssh/known_hosts
 
 script:
   - npm run build
@@ -40,3 +41,4 @@ deploy:
 after_script:
   - git remote add Coding $CODING_REPO
   - git push Coding master
+  - rsync -e "ssh -p 21521" -a ./public/ haochen@118.193.213.247:/home/haochen/site/cn/
