--- a/themes/indigo/_config.yml
+++ b/themes/indigo/_config.yml
@@ -33,7 +33,7 @@ menu:
 rss: /atom.xml
 
 #你的头像url
-avatar: https://avatars0.githubusercontent.com/u/5704064?v=3&s=466
+avatar: /avatar.jpeg
 #favicon
 favicon: /favicon.png
 
