--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@ addons:
 
 before_script:
   - ssh-keyscan -H -t rsa,dsa git.coding.net >> ~/.ssh/known_hosts
-  - ssh-keyscan -H -t rsa,dsa 118.193.213.247 >> ~/.ssh/known_hosts
+  - ssh-keyscan -H -t rsa,dsa -p 21521 118.193.213.247 >> ~/.ssh/known_hosts
 
 script:
   - npm run build
