--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,9 @@ addons:
       - git.coding.net
 
 before_script:
-  - echo -e "StrictHostKeyChecking no\nUserKnownHostsFile /dev/null" >> ~/.ssh/config
+  - ssh-keyscan -H -t rsa,dsa git.coding.net >> ~/.ssh/known_hosts
+  - ssh-keyscan -H -t rsa,dsa -p 21521 118.193.213.247 >> ~/.ssh/known_hosts
+  - cat ~/.ssh/known_hosts
 
 script:
   - npm run build
@@ -40,4 +42,4 @@ deploy:
 after_script:
   - git remote add Coding $CODING_REPO
   - git push Coding master
-  - rsync -avz -e "ssh -p 21521" ./public/ haochen@118.193.213.247:/home/haochen/site/cn/
+  - rsync -avz -e 'ssh -p 21521' ./public/ haochen@118.193.213.247:/home/haochen/site/cn/
