--- a/.travis.yml
+++ b/.travis.yml
@@ -25,9 +25,11 @@ addons:
       - 118.193.213.247
 
 before_script:
+  - echo -e 'Host 118.193.213.247\n\tStrictHostKeyChecking no\n' >> ~/.ssh/config
   - ssh-keyscan -H -t rsa,dsa git.coding.net >> ~/.ssh/known_hosts
   - ssh-keyscan -H -t rsa,dsa -p 21521 118.193.213.247 >> ~/.ssh/known_hosts
   - cat ~/.ssh/known_hosts
+  - cat ~/.ssh/config
 
 script:
   - npm run build
