--- a/themes/indigo/_config.yml
+++ b/themes/indigo/_config.yml
@@ -8,6 +8,9 @@
 #    url: /about       链接，绝对或相对路径，必须。
 #    target: _blank    是否跳出，省略则在当前页面打开
 menu:
+  external-link:
+    text: 新博客
+    url: http://legofan.cc
   home:
     text: 主页
     url: /
