--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,12 +27,12 @@ jobs:
           - v1-dependencies-
       
       # install dependency
-      - run: sudo apt install -y rsync
-      - run: yarn install
-      - run: echo -e 'Host 118.193.213.247\n\tStrictHostKeyChecking no\n' >> ~/.ssh/config
-      - run: ssh-keyscan -H -t rsa,dsa git.coding.net >> ~/.ssh/known_hosts
-      - run: ssh-keyscan -H -t rsa,dsa -p 21521 118.193.213.247 >> ~/.ssh/known_hosts
-      - run: yarn run build
+      - run: sudo apt update
+      - run: npm install
+      - run: git config --global user.email "hi@abnerchou.me"
+      - run: git config --global user.name "Abner"
+      - run: npm run build
+      - run: npm run deploy
 
       - save_cache:
           paths:
