--- a/.travis.yml
+++ b/.travis.yml
@@ -31,6 +31,7 @@ script:
 deploy:
   provider: script
   script: .travis/deploy.sh
+  github-token: $GITHUB_TOKEN
   skip_cleanup: true
   on:
     branch: master
