--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -21,7 +21,9 @@ jobs:
       run: |
         npm install
         npm run build --if-present
-        chmod u+x .travis/deploy.sh
-        .travis/deploy.sh
+        git config --global user.name "Abner Chou"
+        git config --global user.email contact@abnerchou.me
+        git clone --branch gh-pages git@github.com:NoahDragon/cn.git .deploy_git
+        npm run deploy
       env:
         CI: true
