--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -22,7 +22,7 @@ jobs:
         npm install
         npm run build --if-present
         git config --global user.name "Abner Chou"
-        git config --global user.email contact@abnerchou.me
+        git config --global user.email hi@abnerchou.me
         npm run deploy
       env:
         CI: true
