--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -21,6 +21,7 @@ jobs:
       run: |
         npm run build
     - name: deploy
+      run: |
         git config --global user.name "Abner Chou"
         git config --global user.email hi@abnerchou.me
         npm run deploy
