--- a/themes/indigo/_config.yml
+++ b/themes/indigo/_config.yml
@@ -123,3 +123,14 @@ about: 一个有梦的AI.
 visit_counter:
   site_uv: 总访客：
   site_pv: 总点击：
+
+valine:
+  enable: true # 如果你想使用valine，请将值设置为 true
+  appId: z49YHPnXeJAel8QXOKISRjgF-MdYXbMMI # your leancloud appId
+  appKey: nCmNP2LU48qH0Adx8lxPXRSB # your leancloud appKey
+  notify: false # Mail notify
+  verify: false # Verify code
+  avatar: mm # Gravatar style : mm/identicon/monsterid/wavatar/retro/hide
+  placeholder: Just go go # Comment Box placeholder
+  guest_info: nick,mail,link # Comment header info
+  pageSize: 50 # comment list page size
