--- a/themes/indigo/_config.yml
+++ b/themes/indigo/_config.yml
@@ -103,7 +103,7 @@ less:
     - source/css/style.less
 
 #是否开启多说评论，填写你在多说申请的项目名称 duoshuo: duoshuo-key
-duoshuo: abnerchou
+#duoshuo: abnerchou
 #若使用disqus，请在博客config文件中填写disqus_shortname，并关闭多说评论
 disqus_shortname: false
 
